; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_sbgdec.c_lex_char.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_sbgdec.c_lex_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbg_parser = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sbg_parser*, i8)* @lex_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lex_char(%struct.sbg_parser* %0, i8 signext %1) #0 {
  %3 = alloca %struct.sbg_parser*, align 8
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  store %struct.sbg_parser* %0, %struct.sbg_parser** %3, align 8
  store i8 %1, i8* %4, align 1
  %6 = load %struct.sbg_parser*, %struct.sbg_parser** %3, align 8
  %7 = getelementptr inbounds %struct.sbg_parser, %struct.sbg_parser* %6, i32 0, i32 0
  %8 = load i8*, i8** %7, align 8
  %9 = load %struct.sbg_parser*, %struct.sbg_parser** %3, align 8
  %10 = getelementptr inbounds %struct.sbg_parser, %struct.sbg_parser* %9, i32 0, i32 1
  %11 = load i8*, i8** %10, align 8
  %12 = icmp ult i8* %8, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %2
  %14 = load %struct.sbg_parser*, %struct.sbg_parser** %3, align 8
  %15 = getelementptr inbounds %struct.sbg_parser, %struct.sbg_parser* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  %17 = load i8, i8* %16, align 1
  %18 = sext i8 %17 to i32
  %19 = load i8, i8* %4, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp eq i32 %18, %20
  br label %22

22:                                               ; preds = %13, %2
  %23 = phi i1 [ false, %2 ], [ %21, %13 ]
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %5, align 4
  %25 = load i32, i32* %5, align 4
  %26 = load %struct.sbg_parser*, %struct.sbg_parser** %3, align 8
  %27 = getelementptr inbounds %struct.sbg_parser, %struct.sbg_parser* %26, i32 0, i32 0
  %28 = load i8*, i8** %27, align 8
  %29 = sext i32 %25 to i64
  %30 = getelementptr inbounds i8, i8* %28, i64 %29
  store i8* %30, i8** %27, align 8
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
